fix:fixed responsivity issues on small and medium devices

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
   }
 }
 
+.section-sizing{
+  @apply min-h-screen md:min-h-fit lg:min-h-screen;
+}
+
 html{
   scroll-behavior: smooth;
   scrollbar-width: thin;
